--- a/ios/firebase_app_id_file.json
+++ b/ios/firebase_app_id_file.json
@@ -1,7 +1,7 @@
 {
   "file_generated_by": "FlutterFire CLI",
   "purpose": "FirebaseAppID & ProjectID for this Firebase app in this directory",
-  "GOOGLE_APP_ID": "1:963892597032:ios:862aac20e32c50a24d801d",
-  "FIREBASE_PROJECT_ID": "movil-2-db4ad",
-  "GCM_SENDER_ID": "963892597032"
+  "GOOGLE_APP_ID": "1:372955814414:ios:2c86193b36b2aaea6f3a5f",
+  "FIREBASE_PROJECT_ID": "login-56f35",
+  "GCM_SENDER_ID": "372955814414"
 }
