--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,12 +1,12 @@
 name: flutter_ex
 description: A new Flutter project.
 
-publish_to: 'none' # Remove this line if you wish to publish to pub.dev
+publish_to: "none" # Remove this line if you wish to publish to pub.dev
 
 version: 1.0.0+1
 
 environment:
-  sdk: '>=3.1.2 <4.0.0'
+  sdk: ">=3.1.2 <4.0.0"
 
 dependencies:
   flutter:
@@ -19,7 +19,9 @@ dependencies:
   firebase_storage: ^11.4.0
   image_picker: ^1.0.4
   url_launcher: ^6.2.1
-  
+  flutter_map: ^0.14.0
+  latlong2: ^0.8.0
+  location: ^5.0.3
 
 dev_dependencies:
   flutter_test:
