partes de Jhon, Brun, erikk

--- a/macos/firebase_app_id_file.json
+++ b/macos/firebase_app_id_file.json
@@ -1,7 +1,7 @@
 {
   "file_generated_by": "FlutterFire CLI",
   "purpose": "FirebaseAppID & ProjectID for this Firebase app in this directory",
-  "GOOGLE_APP_ID": "1:372955814414:ios:ef3aa203aa0286b06f3a5f",
-  "FIREBASE_PROJECT_ID": "login-56f35",
-  "GCM_SENDER_ID": "372955814414"
+  "GOOGLE_APP_ID": "1:963892597032:ios:95af52666973136f4d801d",
+  "FIREBASE_PROJECT_ID": "movil-2-db4ad",
+  "GCM_SENDER_ID": "963892597032"
 }
